--- a/task1/src/main/webapp/WEB-INF/web.xml
+++ b/task1/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,19 @@ The servlet loads the DSP pages.
 		<servlet-name>dspLoader</servlet-name>
 		<url-pattern>*.dsp</url-pattern>
 	</servlet-mapping>
+	<servlet>
+<servlet-name>spring-mvc</servlet-name>
+<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+<init-param>
+<param-name>contextConfigLocation</param-name>
+<param-value>/WEB-INF/applicationContext.xml</param-value>
+</init-param>
+<load-on-startup>1</load-on-startup>
+</servlet>
+<servlet-mapping>
+<servlet-name>spring-mvc</servlet-name>
+<url-pattern>/</url-pattern>
+</servlet-mapping>
 	<!-- /// -->
 
 	<!-- //// -->
@@ -71,6 +84,9 @@ The servlet loads the DSP pages.
 		<servlet-name>auEngine</servlet-name>
 		<url-pattern>/zkau/*</url-pattern>
 	</servlet-mapping>
+	
+	
+	
 	<!-- //// -->
 
 	<!-- /////////////// -->
